--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,7 +64,7 @@ section {
 }
 
 .selfie-box {
-  padding: 6%;
+  padding: 5%;
 }
 
 
@@ -113,17 +113,6 @@ h3 {
   margin-bottom: 15px;
 }
 
-h2:after {
-  display: block;
-  height: 2px;
-  background-color: #e67e22;
-  content: " ";
-  width: 100px;
-  margin: 0 auto;
-  margin-top: 30px;
-}
-
-
 /* ----- PARAGRAPHS ----- */
 
 .selfie-box p {
@@ -134,8 +123,13 @@ h2:after {
 
 .selfie-box table {
   margin: 18px;
-  font-size: 120%;
+  font-size: 100%;
   line-height: 145%;
+}
+
+.selfie-box td {
+  padding-left: .5em;
+  padding-bottom: .3em;
 }
 
 
@@ -247,6 +241,7 @@ header {
 }
 
 .hero-text-box {
+  text-align: center;
   position: absolute;
   width: 1140px;
   top: 50%;
