--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -418,6 +418,21 @@ header {
 
 /* ----------------------------------------------- */
 
+.contact{
+  margin: 80px auto;
+  text-align: center;
+  color: #e67e22;
+}
+
+.contact p {
+  color: #e67e22;
+  padding: 30px;
+}
+
+.phone {
+  font-family: fantasy;
+  font-size: 1.5rem;
+}
 footer {
   background-color: #2c3e50;
   padding: 50px;
@@ -438,7 +453,7 @@ footer {
 
 .social-links li {
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .social-links li:last-child {
@@ -532,7 +547,7 @@ footer h2 {
 }
 
 ul {
-  list-style-type: none;
+/*  list-style-type: none;*/
   font-family: 'Acme', sans-serif;
 }
 
@@ -658,6 +673,8 @@ ul {
 
 .project-photo {
   overflow: hidden;
+  box-shadow: 0 2px 2px grey;
+  padding: 20px;
 }
 
 .project-photo img {
@@ -666,6 +683,7 @@ ul {
   opacity: 0.7;
   transform: scale(1.15);
   transition: transform 0.5s, opacity 0.5s;
+  padding: 10px;
 }
 
 .project-photo img:hover {
