--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -116,9 +116,10 @@ h3 {
 /* ----- PARAGRAPHS ----- */
 
 .selfie-box p {
-  font-size: 110%;
-  line-height: 145%;
+  font-size: 120%;
+  line-height: 200%;
   text-align: justify;
+  margin-top: 20px;
 }
 
 .selfie-box table {
